Forge Beta: #-#-2015 ver 1.5.39


# cards in total.


-------------
Release Notes
-------------

- Interface Update -
The interface has received several small changes.
- The "Players" panel has been removed. This information can now be viewed by
  hovering the cursor over a player's avatar.
- The poison counters value has been moved to next to a players life total.
  This is only visible if the player has any poison counters.
- The poison counters button has been replaced with a Command Zone button.
  The command zone panels have been removed.

- Display tokens on the same row as other cards / on their own row -
It is now possible to make the game display tokens on the same row as other
cards to conserve battlefield space (for example, creature tokens are displayed
on the same row as creatures). The option that controls this behavior can be 
found in Forge preferences under "Graphic Options". It is called "Display Tokens
in a Separate Row" and defaults to "enabled" (classic Forge behavior) until the
new mode is tested thoroughly. If you disable this option, the game will display
tokens together with other cards as opposed to in their own row, which will make
the game use your screen space more effectively. Tokens will be displayed to the
right of the non-token cards in the same row.

- Network play (BETA) -
This version of Forge includes a preliminary version of peer-to-peer (P2P)
network support. If one player hosts, other players can connect to that
player's machine by filling out the corresponding IP address and port number
(default 36743), provided the lobby contains one or more open player slots.
Do not expect network support to work reliably yet, any bug reports or other
comments are welcome!

- Smarter Deck Color Determination -
When determining the color of decks, colors of hybrid and phyrexian cards are no
longer considered unless they can be produced by a land in the deck

- Land Color Filtering in Deck Editor -